Refactor: Remove redundant code.